// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render without errors 1`] = `
<DocumentFragment>
  <button>
    Hover me
  </button>
</DocumentFragment>
`;

exports[`should show on mouseover if isDisabled has a falsy value 1`] = `
<DocumentFragment>
  <button
    aria-describedby="tooltip-30"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`shows on mouseover and closes on mouseout 1`] = `
<DocumentFragment>
  <button
    aria-describedby="tooltip-22"
  >
    Hover me
  </button>
</DocumentFragment>
`;
